Changelog
=========

1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2015-11-25)
------------------

- Initial release.
  [buchi]